fixed section2 on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,6 +41,13 @@
   color: #343432;
   }
 
+  #section2{
+    position:relative;
+    height: 100vh;
+    width:  100vw;
+
+  }
+
   #section2 .aboutText{
   position:absolute;
   margin-left: 5%;
@@ -147,6 +154,13 @@
   color: #343432;
   }
 
+  #section2{
+    position:relative;
+    height: 100vh;
+    width:  100vw;
+
+  }
+
   #section2 .aboutText{
   position:absolute;
   margin-left: 5%;
@@ -222,100 +236,107 @@
     text-align:center;
   }
 
-.img-thumbnail{
-  position:absolute;
-  margin-left: 7%;
-  margin-top: 15%;
-  width: 400px;
-  border:1px solid #4d4d4c !important;
-  border-radius: 6px !important;
-  padding: 2px !important;
-}
+  .img-thumbnail{
+    position:absolute;
+    margin-left: 7%;
+    margin-top: 15%;
+    width: 400px;
+    border:1px solid #4d4d4c !important;
+    border-radius: 6px !important;
+    padding: 2px !important;
+  }
 
-.division .center-block{
-  width: 80%;
-  height: 1px;
-  background-color: #242423;
-  opacity: 50%;
-}
+  .division .center-block{
+    width: 80%;
+    height: 1px;
+    background-color: #242423;
+    opacity: 50%;
+  }
 
-#section1 p{
-  font-size: x-large;
-  margin-left:50%;
-  margin-right: 2%;
+  #section1 p{
+    font-size: x-large;
+    margin-left:50%;
+    margin-right: 2%;
 
-}
+  }
 
-#section1 h1{
-  text-align:left;
-  font-size: 35px;
-  margin-bottom: 40px;
-  margin-left:50%;
-  font-weight:300;
-}
-.aboutText{
+  #section1 h1{
+    text-align:left;
+    font-size: 35px;
+    margin-bottom: 40px;
+    margin-left:50%;
+    font-weight:300;
+  }
+ .aboutText{
   margin-top: 15%;
   color: #343432;
-}
+ }
 
-#section2 .aboutText{
+ #section2{
+   position:relative;
+   height: 100vh;
+   width:  100vw;
+
+ }
+
+ #section2 .aboutText{
   position:absolute;
   margin-left: 5%;
   margin-right: 50%;
   margin-top: 2%;
   color: #343432;
-}
+ }
 
-#section2 h1{
+ #section2 h1{
   font-size: 30px;
   margin-bottom: 5%;
   text-align: left;
-}
+ }
 
-#section2 p{
+ #section2 p{
   font-size: 20px;
-}
+ }
 
-#section2 .container{
+ #section2 .container{
   width: 500px;
   float: right;
   margin-right: 2%;
   margin-top: 15%;
 
-}
+ }
 
-#section2 div.carousel-caption p{
+ #section2 div.carousel-caption p{
   font-size: 16px;
   color:#343432;
-}
+ }
 
-#section3 .aboutText{
+ #section3 .aboutText{
   position:absolute;
   margin-left: 5%;
   margin-right: 30%;
   margin-top: 10%;
   color: #343432;
-}
+ }
 
-#section3 h1{
+ #section3 h1{
   font-size: 30px;
   text-align: left;
   margin-bottom: 10%;
-}
+ }
 
-#section3 ul li{
+ #section3 ul li{
   margin-bottom: 30px;
   font-size: 26px;
-}
+ }
 
-.cbuttons{
+ .cbuttons{
   width: 20%;
-}
+ }
 
-.cbuttons div{
+ .cbuttons div{
   font-size: 16px;
   padding-top: 3px;
-}
+ }
 
 
 }
@@ -364,6 +385,13 @@
     margin-right: 5%;
     margin-top: 15%;
     color: #343432;
+  }
+
+  #section2{
+    position:relative;
+    height: 100vh;
+    width:  100vw;
+
   }
 
   #section2 .aboutText{
@@ -474,6 +502,13 @@
     color: #343432;
   }
 
+  #section2{
+    position:relative;
+    height: 100vh;
+    width:  100vw;
+
+  }
+
   #section2 .aboutText{
     position:absolute;
     margin-left: 2%;
@@ -574,6 +609,13 @@
   .aboutText{
     margin-top: 85%;
     color: #343432;
+  }
+
+  #section2{
+    position:relative;
+    height: 125vh;
+    width:  100vw;
+
   }
 
   #section2 .aboutText{
@@ -678,12 +720,7 @@ h1{
   width:  100vw;
 }
 
-#section2{
-  position:relative;
-  height: 100vh;
-  width:  100vw;
 
-}
 
 
 
